extension/toolbars.css
/* Blip toolbars */
.blip-menu {
	border-radius: 2px !important;
	/*overflow: hidden;*/
}
	.blip-menu:not(.hidden) {
		display: inline-block !important;
	}
	.blip-menu.read-only-menu {
		border: 1px solid rgba(0,0,0,0.1) !important;
	}
	.blip-menu.edit-menu {
		border: 1px solid #3079ED !important;
	}

.wave-panel > * > .blip-menu {
	border-radius: 2px !important;
	/*display: inline-block !important;*/
}

.root-blip ~ .blip-container > .blip-menu-container:not(.fixed) {
	left: 24px !important;
}

.blip-menu button {
	box-shadow: none !important;
	border-radius: 0 !important;
	/*margin-left: -2px !important;*/
}
.blip-menu > button:first-child {
	   border-top-left-radius: 2px !important;
	border-bottom-left-radius: 2px !important;
	/*margin-left: 0 !important;*/
}
/*.blip-menu > button:last-child*/
.blip-menu .gearwheel {
	   border-top-right-radius: 2px !important;
	border-bottom-right-radius: 2px !important;
}

/* View mode blip toolbars */
.blip-menu.read-only-menu button {
	background: linear-gradient(#F5F5F5,#F1F1F1) !important;
	/*border-color: rgba(0,0,0,0.1) transparent !important;*/
	color: #444 !important;
}
.blip-menu.read-only-menu button:hover {
	background: linear-gradient(#F8F8F8,#F1F1F1) !important;
	/*box-shadow: none !important;
	border: 1px solid #C6C6C6 !important;
	box-sizing: content-box !important;
	margin: -1px !important;*/
	/*box-shadow: 0 0 0 1px #C6C6C6 !important;*/
}
	.blip-menu.read-only-menu button:hover .icon {
		-webkit-filter: brightness(0.4) !important;
	}
.blip-menu.read-only-menu button:active {
	background: linear-gradient(#EEE,#E0E0E0) !important;
	/*box-shadow: inset 0 1px 2px rgba(0,0,0,0.1) !important;
	border-color: #CCC !important;*/
	box-shadow: /*0 0 0 1px #CCC,*/ inset 0 1px 2px rgba(0,0,0,0.1) !important;
}

/* Edit mode blip toolbars */

/*.blip-menu.edit-menu button {
	background: linear-gradient(#4D90FE,#4787ED) !important;
	border-color: #3079ED transparent !important;
	color: white !important;
}*/
.blip-menu.edit-menu button:first-child {
	border-color: #3079ED !important;
}
.blip-menu.edit-menu button:hover {
	/*box-shadow: 0 0 0 1px #2F5BB7 !important;*/
}
.blip-menu.edit-menu button:active {
	box-shadow: /*0 0 0 1px #2F5BB7,*/ inset 0 1px 2px rgba(0,0,0,0.3) !important;
}

/* Gear menus */
.blip-menu .other-blipmenu-container {
	top: 34px !important;
}
.blip-menu .other-blipmenu-container .triangle {
	top: -4px !important;
}

.blip-container .blip-menu .other-blipmenu-container > .list-menu-button > button,
                .blip-menu .other-blipmenu-container > .list-menu-button > button {
	width: 100% !important;
	background: transparent none !important;
	border: 0px none transparent !important;
	color: #333 !important;
	box-shadow: none !important;
}
.blip-container .blip-menu .other-blipmenu-container > .list-menu-button > button:hover,
                .blip-menu .other-blipmenu-container > .list-menu-button > button:hover {
	background: #EEE !important;
	color: #333 !important;
	box-shadow: none !important;
}
.blip-container .blip-menu .other-blipmenu-container > .list-menu-button > button:active,
                .blip-menu .other-blipmenu-container > .list-menu-button > button:active {
	background: #EEE !important;
	color: #333 !important;
	box-shadow: none !important;
}

